# ascii-cat-llm-finetuning

./: .gitignore  README.md  pyproject.toml
debug/: fresh-lora-sampling.txt  fresh-lora-trained.txt  gguf-local-q5_k_m.txt  gguf-local.txt  lora-loaded.txt  merged-local.txt
generation_examples/: cats.txt
src/: main.py
src/conversion/modal/: Dockerfile  base_model_creation.py  convert_gguf.py
src/dataset/ascii_art/animals/aardvark/0/: content.txt  meta.json
src/dataset/ascii_art/animals/bat/0/: content.txt  meta.json
src/dataset/ascii_art/animals/bat/1/: content.txt
src/dataset/ascii_art/animals/bear/0/: content.txt  meta.json
src/dataset/ascii_art/animals/bear/1/: meta.json
src/dataset/ascii_art/animals/beaver/0/: content.txt  meta.json
src/dataset/ascii_art/animals/beaver/1/: content.txt
src/dataset/ascii_art/animals/beaver/3/: content.txt  meta.json
src/dataset/ascii_art/animals/birds/0/: content.txt  meta.json
src/dataset/ascii_art/animals/birds/1/: content.txt  meta.json
src/dataset/ascii_art/animals/birds/10/: content.txt  meta.json
src/dataset/ascii_art/animals/birds/11/: content.txt  meta.json
src/dataset/ascii_art/animals/birds/12/: content.txt  (+1 more)
src/dataset/notebooks/: explore-tokenization.ipynb
src/dataset/scripts/: create_dataset.py  upload_dataset.py  visualize_dataset.py
src/finetuning/google-colab/: train.ipynb
src/finetuning/modal/: Dockerfile  convert_gguf.py  train.py
src/inference/: inference.ipynb
src/inference/notebooks/: debug.py  inspect-precision.ipynb  llama_cpp_inference.ipynb  safetensor_inference.ipynb
(+285 files in other folders)
